<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="fill_horizontal"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/cityHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/city"
            android:textColor="@color/purple_200"
            android:textSize="24sp" />

        <View
            android:id="@+id/headerDivider"
            android:layout_width="1dp"
            android:layout_height="35dp"
            android:layout_marginStart="10dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/pollutantHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/pollutant"
            android:textColor="@color/teal_200"
            android:textSize="24sp" />

        <View
            android:id="@+id/headerDivider2"
            android:layout_width="1dp"
            android:layout_height="35dp"
            android:layout_marginStart="10dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/valueHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/value_g_m"
            android:textColor="@color/green"
            android:textSize="24sp" />

    </LinearLayout>

    <ListView
        android:id="@+id/listView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

    </ListView>

    <TextView
        android:id="@+id/recordsQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#7A7A7A"
        android:text="30"
        android:textAlignment="center"
        android:textColor="#E1E1E1"
        android:textSize="24sp"
        app:circularflow_defaultRadius="5sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>